<resources>
    <string name="app_name">Realtime Database</string>
    <string name="name">Nama</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="action_save">Simpan</string>
    <string name="action_add_new">Tambah Baru</string>
    <string name="action_update">Update Data</string>
    <string name="action_get_all">Get All</string>
    <string name="action_update_lokasi">Update Lokasi</string>
    <string name="google_api_key2">AIzaSyA67FV6yDIvGu9-sf4Rtm0uZ9XMFF3Q4bE</string>

    <string name="action_clear">Clear</string>
    <string name="action_circle">Draw Circle</string>
    <string name="action_overlay">Draw Overlay</string>
    <string name="action_polygon">Draw Polygon</string>
    <string name="action_traffic">Toggle Traffic</string>
    <string name="action_cycle_map_type">Cycle Map Type</string>

    <string name="dialog_play_services_unavailable">Google Play Services are unavailable.</string>
    <string name="dialog_download_play_services">Download Play Services</string>
    <string name="dialog_close_program">Close Program</string>
    <string name="title_activity_maps">Map</string>

</resources>
